# ziti-tunnel-sdk-c

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  HACKING.md  README.md  RELEASING.md  bpf.md  capture.c  flake.nix  l2.host.v1.json  l2.intercept.v1.json  l2.md  package-repos.gpg  vcpkg.json
.github/: cpack-matrix.yml  release-drafter.yml
docker/: .gitignore  BUILD.md  Dockerfile  Dockerfile.base  Dockerfile.copy  Dockerfile.debian  Dockerfile.fetch  Dockerfile.linux-build  Dockerfile.linux-cross-build  Dockerfile.linux-native-build  Dockerfile.ziti-host  README.md  buildx.sh  compose.host.yml  compose.intercept.yml  compose.test.yml  docker-compose.yml  docker-entrypoint.sh  (+10 more)
lib/: CMakeLists.txt  README.md  dns.c  intercept.c  intercept.h  internal_dns_manager.c  route.c  tunnel_tcp.c  tunnel_tcp.h  tunnel_udp.c  tunnel_udp.h  tunneler_tcp.c  tunneler_tcp.h  tunneler_udp.c  tunneler_udp.h  ziti_hosting.c  ziti_tunnel.c  ziti_tunnel_cbs.c  ziti_tunnel_ctrl.c  ziti_tunnel_priv.h  ziti_tunneler.c  ziti_tunneler_cbs.c  ziti_tunneler_priv.h
lib/lwip/: lwiphooks.c  lwiphooks.h  lwipopts.h  netif_shim.c  netif_shim.h
lib/tests/: CMakeLists.txt  dns_test.cpp  tunnel_integ_test.cpp
lib/ziti-tunnel/: CMakeLists.txt  dns.c  intercept.c  internal_dns_manager.c  route.c  tunnel_l2.c  tunnel_l2.h  tunnel_log.c  tunnel_tcp.c  tunnel_tcp.h  tunnel_udp.c  tunnel_udp.h  ziti_tunnel.c  ziti_tunnel_priv.h  ziti_utils.c
lib/ziti-tunnel-cbs/: CMakeLists.txt  dns_host.c  dns_host.h  dns_msg.c  underlay.h  underlay_lwip.c  underlay_uv.c  ziti_dns.c  ziti_hosting.c  ziti_hosting.h  ziti_hosting_socket.c  ziti_instance.h  ziti_tunnel_cbs.c  ziti_tunnel_ctrl.c  ziti_tunnel_model.c
lib/ziti-tunnel-cbs/include/ziti/: ziti_dns.h  ziti_tunnel_cbs.h
lib/ziti-tunnel-cbs/tests/: CMakeLists.txt  all_tests.cpp  dns_test.cpp  tunnel_cbs_tests.cpp
lib/ziti-tunnel/include/ziti/: netif_driver.h  ziti_tunnel.h
lib/ziti-tunnel/lwip/: lwip_cloned_fns.c  lwip_cloned_fns.h  lwiphooks.h  lwiphooks_ip4.c  lwiphooks_ip6.c  lwipopts.h  netif_shim.c  netif_shim.h
lib/ziti-tunnel/lwip/ports/android/arch/: cc.h
lib/ziti-tunnel/tests/: CMakeLists.txt  address_test.cpp  tunnel_test.cpp
programs/: CMakeLists.txt
programs/tests/: CMakeLists.txt  ziti-edge-tunnel-test.c
programs/ziti-edge-tunnel/: CMakeLists.txt  config-utils.c  dnsmasq_manager.c  instance-config.c  instance.c  internal_dns_manager.c  ipc_cmd.c  ipc_event.c  log_utils.c  model.c  process_cmd.c  utils.c  windows-events.c  windows-scripts.c  windows-service.c  wintun.cmake  ziti-edge-tunnel.c
programs/ziti-edge-tunnel/events/: events.h
programs/ziti-edge-tunnel/include/: config-utils.c  config-utils.h  file-rotator.h  identity-utils.h  instance-config.h  instance.h  log-utils.h  log_utils.c  service-utils.h  utils.c
programs/ziti-edge-tunnel/include/linux/: diverter.h  libsystemd.h
programs/ziti-edge-tunnel/include/model/: dtos.h  events.h
programs/ziti-edge-tunnel/include/windows/: powrprofex.h  windows-events.h  windows-scripts.h  windows-service.c  windows-service.h
programs/ziti-edge-tunnel/linux/: diverter.c  libsystemd.c
programs/ziti-edge-tunnel/netif_driver/: pcap_common.c  pcap_common.h  socket_util.c  socket_util.h
programs/ziti-edge-tunnel/netif_driver/darwin/: utun.c  utun.h
programs/ziti-edge-tunnel/netif_driver/linux/: capability.c  capability.h  libiproute.c  libiproute.h  pcap.c  pcap.h  resolvers.c  resolvers.h  tun.c  tun.h  utils.c  utils.h
programs/ziti-edge-tunnel/netif_driver/linux_geneve/: geneve.c  geneve.h
programs/ziti-edge-tunnel/netif_driver/windows/: pcap.c  pcap.h  tap.c  tap.h  tun.c  tun.c.back  tun.h
programs/ziti-edge-tunnel/package/: CPackGenConfig.cmake  CPackPackage.cmake  RPM_CHANGELOG
programs/ziti-edge-tunnel/package/deb/: conffiles.in  postinst.in  postrm.in  preinst.in  prerm.in  templates.in
programs/ziti-edge-tunnel/package/rpm/: post.sh.in  postun.sh.in  pre.sh.in  preun.sh.in
programs/ziti-edge-tunnel/package/scripts/: os_release.awk
programs/ziti-edge-tunnel/package/systemd/: ziti-edge-tunnel.env.in  ziti-edge-tunnel.pkla.sample.in  ziti-edge-tunnel.rules.sample.in  ziti-edge-tunnel.service.in  ziti-edge-tunnel.sh.in
programs/ziti-edge-tunnel/windows/: log_utils.c  minidump.c  minidump.h
programs/ziti-tunnel-app/: CMakeLists.txt  dnsmasq_manager.c  ziti-tunnel-app.c
programs/ziti-tunnel-app/netif_driver/: socket_util.c  socket_util.h
programs/ziti-tunnel-app/netif_driver/darwin/: utun.c
programs/ziti-tunnel-app/netif_driver/linux/: tun.c  tun.h
programs/ziti-tunneler/: CMakeLists.txt  tun_darwin.c  ziti-tunneler-cbs.c  ziti-tunneler-cbs.h  ziti-tunneler.c
programs/ziti-tunneler/netif_driver/darwin/: utun.c  utun.h
programs/ziti-tunneler/netif_driver/linux/: tun.c  tun.h
tests/: CMakeLists.txt  all_tests.cpp
tests/integration/: README.md  add_identity_test.go  config.example.json  data_path_test.go  dex_test.go  external_auth_test.go  go.mod  go.sum  identity_on_off_test.go  keychain_test.go  list_identities_test.go  main_test.go  mfa_test.go  pkce_test.go  remove_identity_test.go  set_log_level_test.go  status_test.go  tunnel_restart_test.go  tunneler_to_tunneler_test.go  url_enrollment_test.go
tests/integration/scripts/: fetch-dex.ps1  fetch-dex.sh  run-ci.ps1  run-ci.sh
tests/integration/testdata/: dex-config.yaml  fixture.json
tests/integration/testutil/: commands.go  common.go  config.go  dex.go  dex_flow.go  echo.go  identity_file.go  idp.go  idp_flow.go  ipc.go  ipc_types.go  ipc_unix.go  ipc_windows.go  keychain_darwin.go  keychain_windows.go  leak_check.go  leakcheck.go  lsan_linux.go  lsan_other.go  oidc_flow.go  overlay.go  pause.go  pkce.go  pkce_flow.go  procstats_darwin.go  procstats_linux.go  procstats_other.go  runtest.go  timeout.go  zet.go  zitidump_parse.go
tools/dcp/: CMakeLists.txt  README.md  dcp_common.h  dcp_identify  dcp_identify.c  dcp_respond  dcp_respond.c  rawsock.h  rawsock_linux.c  rawsock_macos.c  rawsock_windows.c
(+107 files in other folders)
